--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -76,22 +76,23 @@
         <div class="row">
           <div class="col-lg-8">
             <div class="main_blog_details">
-              <img class="img-fluid" src="{% static 'img/blog/blog4.png' %}" alt="">
-              <h4>Cartridge Is Better Than Ever <br /> A Discount Toner</h4>
+                {% if post.image_url %}
+                    <img class="img-fluid" src="{{post.image_url}}" alt="">
+                {% else %}
+                    <img class="img-fluid" src="{% static 'img/banner/blog.png' %}">
+                {% endif %}
+              <h4>{{post.title}}</h4>
               <div class="user_details">
                 <div class="mt-sm-0 mt-3">
                   <div class="media">
                     <div class="media-body">
-                      <h5>Mark wiens</h5>
-                      <p>12 Dec, 2017 11:21 am</p>
+                      <h5>{{post.author}}</h5>
+                      <p>{{post.published_at}}</p>
                     </div>
                   </div>
                 </div>
               </div>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc scelerisque ut erat ut auctor...
-                <!-- Оставлен текст статьи как есть -->
-              </p>
+              <p>{{post.text}}</p>
               <div class="news_d_footer flex-column flex-sm-row">
                 <a href="#"><span class="align-middle mr-2"><i class="ti-heart"></i></span>Lily and 4 people like this</a>
                 <a class="justify-content-sm-center ml-sm-auto mt-sm-0 mt-2" href="#">
