--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -108,49 +108,25 @@
             </div>
             
             <div class="comments-area">
-              <h4>03 Comments</h4>
+              <h4>{{post.comments|length}} Comments</h4>
               <div class="comment-list">
                 <div class="single-comment justify-content-between d-flex">
                   <div class="user justify-content-between d-flex">
                     <div class="desc">
-                      <h5><a href="#">Emilly Blunt</a></h5>
-                      <p class="date">December 4, 2017 at 3:12 pm </p>
-                      <p class="comment">Never say goodbye till the end comes!</p>
+                      {% for comment in post.comments %}
+                        <h5><a href="#">{{comment.author}}</a></h5>
+                        <p class="date">{{comment.published_at}}</p>
+                        <p class="comment">
+                            {{comment.text}}
+                        </p>
+                      {% endfor %}
                     </div>
                   </div>
                   <div class="reply-btn">
-                    <a href="" class="btn-reply text-uppercase">reply</a>
+                          <a href="" class="btn-reply text-uppercase">reply</a> 
                   </div>
                 </div>
-              </div>  
-              <div class="comment-list">
-                <div class="single-comment justify-content-between d-flex">
-                  <div class="user justify-content-between d-flex">
-                    <div class="desc">
-                      <h5><a href="#">Maria Luna</a></h5>
-                      <p class="date">December 4, 2017 at 3:12 pm </p>
-                      <p class="comment">Never say goodbye till the end comes!</p>
-                    </div>
-                  </div>
-                  <div class="reply-btn">
-                    <a href="" class="btn-reply text-uppercase">reply</a>
-                  </div>
-                </div>
-              </div>  
-              <div class="comment-list">
-                <div class="single-comment justify-content-between d-flex">
-                  <div class="user justify-content-between d-flex">
-                    <div class="desc">
-                      <h5><a href="#">Ina Hayes</a></h5>
-                      <p class="date">December 4, 2017 at 3:12 pm </p>
-                      <p class="comment">Never say goodbye till the end comes!</p>
-                    </div>
-                  </div>
-                  <div class="reply-btn">
-                    <a href="" class="btn-reply text-uppercase">reply</a>
-                  </div>
-                </div>
-              </div>                                                    
+              </div>	                                          				
             </div>
           </div>
 
