--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% load static %}
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
