--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,253 +1,133 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+
+{% block title %}
+  Sensive Blog - Contact
+{% endblock %}
+
+{% block content %}
   {% load static %}
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Remake Barber - Blog Details</title>
 
-    <!-- favicon -->
-    <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/png">
-    <!-- стили -->
-    <link rel="stylesheet" href="{% static 'styles.min.css' %}">
-  </head>
-  <body>
-    <!--================Header Menu Area =================-->
-    <header class="header_area">
-      <div class="main_menu">
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <div class="container box_1620">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <a class="navbar-brand logo_h" href="{% url 'index' %}">
-              <img src="{% static 'img/logo.png' %}" alt="">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-              <ul class="nav navbar-nav menu_nav justify-content-center">
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'index' %}">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'contact' %}">Contact</a>
-                </li>
-              </ul>
-              <ul class="nav navbar-nav navbar-right navbar-social">
-                <li><a href="#"><i class="ti-facebook"></i></a></li>
-                <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                <li><a href="#"><i class="ti-instagram"></i></a></li>
-                <li><a href="#"><i class="ti-skype"></i></a></li>
-              </ul>
-            </div> 
-          </div>
-        </nav>
-      </div>
-    </header>
-    <!--================Header Menu Area =================-->
-    
-    <!--================ Hero sm Banner start =================-->      
-    <section class="mb-30px">
-      <div class="container">
-        <div class="hero-banner hero-banner--sm">
-          <div class="hero-banner__content">
-            <h1>Blog details</h1>
-            <nav aria-label="breadcrumb" class="banner-breadcrumb">
-              <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Blog Details</li>
-              </ol>
-            </nav>
-          </div>
+  <!--================ Hero sm banner start =================-->
+  <section class="mb-30px">
+    <div class="container">
+      <div class="hero-banner hero-banner--sm">
+        <div class="hero-banner__content">
+          <h1>Contact Us</h1>
+          <nav aria-label="breadcrumb" class="banner-breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item">
+                <a href="{% url 'index' %}">Home</a>
+              </li>
+              <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
+            </ol>
+          </nav>
         </div>
       </div>
-    </section>
-    <!--================ Hero sm Banner end =================-->    
+    </div>
+  </section>
+  <!--================ Hero sm banner end =================-->
 
-    <!--================ Start Blog Post Area =================-->
-    <section class="blog-post-area section-margin">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8">
-            <div class="main_blog_details">
-              <img class="img-fluid" src="{% static 'img/blog/blog4.png' %}" alt="">
-              <h4>Cartridge Is Better Than Ever <br /> A Discount Toner</h4>
-              <div class="user_details">
-                <div class="mt-sm-0 mt-3">
-                  <div class="media">
-                    <div class="media-body">
-                      <h5>Mark wiens</h5>
-                      <p>12 Dec, 2017 11:21 am</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc scelerisque ut erat ut auctor...
-                <!-- Оставлен текст статьи как есть -->
-              </p>
-              <div class="news_d_footer flex-column flex-sm-row">
-                <a href="#"><span class="align-middle mr-2"><i class="ti-heart"></i></span>Lily and 4 people like this</a>
-                <a class="justify-content-sm-center ml-sm-auto mt-sm-0 mt-2" href="#">
-                  <span class="align-middle mr-2"><i class="ti-themify-favicon"></i></span>03 Comments
-                </a>
-                <div class="news_socail ml-sm-auto mt-sm-0 mt-2">
-                  <a href="#"><i class="fab fa-facebook-f"></i></a>
-                  <a href="#"><i class="fab fa-twitter"></i></a>
-                  <a href="#"><i class="fab fa-dribbble"></i></a>
-                  <a href="#"><i class="fab fa-behance"></i></a>
-                </div>
-              </div>
-            </div>
-            
-            <div class="comments-area">
-              <h4>03 Comments</h4>
-              <div class="comment-list">
-                <div class="single-comment justify-content-between d-flex">
-                  <div class="user justify-content-between d-flex">
-                    <div class="desc">
-                      <h5><a href="#">Emilly Blunt</a></h5>
-                      <p class="date">December 4, 2017 at 3:12 pm </p>
-                      <p class="comment">Never say goodbye till the end comes!</p>
-                    </div>
-                  </div>
-                  <div class="reply-btn">
-                    <a href="" class="btn-reply text-uppercase">reply</a>
-                  </div>
-                </div>
-              </div>  
-              <div class="comment-list">
-                <div class="single-comment justify-content-between d-flex">
-                  <div class="user justify-content-between d-flex">
-                    <div class="desc">
-                      <h5><a href="#">Maria Luna</a></h5>
-                      <p class="date">December 4, 2017 at 3:12 pm </p>
-                      <p class="comment">Never say goodbye till the end comes!</p>
-                    </div>
-                  </div>
-                  <div class="reply-btn">
-                    <a href="" class="btn-reply text-uppercase">reply</a>
-                  </div>
-                </div>
-              </div>  
-              <div class="comment-list">
-                <div class="single-comment justify-content-between d-flex">
-                  <div class="user justify-content-between d-flex">
-                    <div class="desc">
-                      <h5><a href="#">Ina Hayes</a></h5>
-                      <p class="date">December 4, 2017 at 3:12 pm </p>
-                      <p class="comment">Never say goodbye till the end comes!</p>
-                    </div>
-                  </div>
-                  <div class="reply-btn">
-                    <a href="" class="btn-reply text-uppercase">reply</a>
-                  </div>
-                </div>
-              </div>                                                    
-            </div>
-          </div>
+  <!--================ Contact section start =================-->
+  <section class="section-margin--small section-margin">
+    <div class="container">
+      <div class="d-none d-sm-block mb-5 pb-4">
 
-          <!-- Start Blog Post Sidebar -->
-          <div class="col-lg-4 sidebar-widgets">
-            <div class="widget-wrap">
-              <div class="single-sidebar-widget newsletter-widget">
-                <h4 class="single-sidebar-widget__title">Newsletter</h4>
-                <div class="form-group mt-30">
-                  <div class="col-autos">
-                    <input type="text" class="form-control" id="inlineFormInputGroup"
-                           placeholder="Enter email"
-                           onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email'">
-                  </div>
-                </div>
-                <button class="bbtns d-block mt-20 w-100">Subcribe</button>
-              </div>
-
-              <div class="single-sidebar-widget post-category-widget">
-                <h4 class="single-sidebar-widget" style="height:200px;">Здесь будет реклама</h4>
-              </div>
-            </div>
-          </div>
-          <!-- End Blog Post Sidebar -->
-        </div>
+        <div id="map" style="height: 500px;">
+          {{ html_map|safe }}
       </div>
-    </section>
-    <!--================ End Blog Post Area =================-->
 
-    <!--================ Start Footer Area =================-->
-    <footer class="footer-area section-padding">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3  col-md-6 col-sm-6">
-            <div class="single-footer-widget">
-              <h6>About Us</h6>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore
-                magna aliqua.
-              </p>
+      <div class="row">
+        <div class="col-md-4 col-lg-3 mb-4 mb-md-0">
+          <div class="media contact-info">
+            <span class="contact-info__icon"><i class="ti-home"></i></span>
+            <div class="media-body">
+              <h3>California United States</h3>
+              <p>Santa Monica Boulevard</p>
             </div>
           </div>
-          <div class="col-lg-4  col-md-6 col-sm-6">
-            <div class="single-footer-widget">
-              <h6>Newsletter</h6>
-              <p>Stay update with our latest</p>
-              <div id="mc_embed_signup">
-                <form target="_blank" novalidate
-                      action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                      method="get" class="form-inline">
-                  <div class="d-flex flex-row">
-                    <input class="form-control" name="EMAIL" placeholder="Enter Email"
-                           onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
-                           required="" type="email">
-                    <button class="click-btn btn btn-default">
-                      <span class="lnr lnr-arrow-right"></span>
-                    </button>
-                    <div style="position: absolute; left: -5000px;">
-                      <input name="b_36c4fd991d266f23781ded980_aefe40901a"
-                             tabindex="-1" value="" type="text">
-                    </div>
-                  </div>
-                  <div class="info"></div>
-                </form>
-              </div>
+          <div class="media contact-info">
+            <span class="contact-info__icon"><i class="ti-headphone"></i></span>
+            <div class="media-body">
+              <h3>
+                <a href="tel:454545654">00 (440) 9865 562</a>
+              </h3>
+              <p>Mon to Fri 9am to 6pm</p>
             </div>
           </div>
-          <div class="col-lg-3  col-md-6 col-sm-6">
-          </div>
-          <div class="col-lg-2 col-md-6 col-sm-6">
-            <div class="single-footer-widget">
-              <h6>Follow Us</h6>
-              <p>Let us be social</p>
-              <div class="footer-social d-flex align-items-center">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-dribbble"></i></a>
-                <a href="#"><i class="fab fa-behance"></i></a>
-              </div>
+          <div class="media contact-info">
+            <span class="contact-info__icon"><i class="ti-email"></i></span>
+            <div class="media-body">
+              <h3>
+                <a href="mailto:support@colorlib.com">support@colorlib.com</a>
+              </h3>
+              <p>Send us your query anytime!</p>
             </div>
           </div>
         </div>
-        <div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
-          <p class="footer-text m-0">
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;
-            <script>document.write(new Date().getFullYear());</script>
-            All rights reserved | This template is made with
-            <i class="fa fa-heart" aria-hidden="true"></i> by
-            <a href="https://colorlib.com" target="_blank">Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          </p>
+
+        <div class="col-md-8 col-lg-9">
+          <form 
+            action="./" 
+            class="form-contact contact_form" 
+            method="post" 
+            id="contactForm" 
+            novalidate="novalidate"
+          >
+            <div class="row">
+              <div class="col-lg-5">
+                <div class="form-group">
+                  <input 
+                    class="form-control" 
+                    name="name" 
+                    id="name" 
+                    type="text" 
+                    placeholder="Enter your name" 
+                  />
+                </div>
+                <div class="form-group">
+                  <input 
+                    class="form-control" 
+                    name="email" 
+                    id="email" 
+                    type="email" 
+                    placeholder="Enter email address" 
+                  />
+                </div>
+                <div class="form-group">
+                  <input 
+                    class="form-control" 
+                    name="subject" 
+                    id="subject" 
+                    type="text" 
+                    placeholder="Enter Subject" 
+                  />
+                </div>
+              </div>
+              <div class="col-lg-7">
+                <div class="form-group">
+                  <textarea 
+                    class="form-control different-control w-100" 
+                    name="message" 
+                    id="message" 
+                    cols="30" 
+                    rows="5" 
+                    placeholder="Enter Message"
+                  ></textarea>
+                </div>
+              </div>
+            </div>
+            <div class="form-group text-center text-md-right mt-3">
+              <button 
+                type="submit" 
+                class="button button--active button-contactForm"
+              >
+                Send Message
+              </button>
+            </div>
+          </form>
         </div>
       </div>
-    </footer>
-    <!--================ End Footer Area =================-->
-
-    <!-- скрипты -->
-    <script src="{% static 'scripts.js' %}"></script>
-  </body>
-</html>
+    </div>
+  </section>
+  <!--================ Contact section end =================-->
+{% endblock %}
